<resources>
    <string name="app_name">LaunDirii</string>
    <string name="sign_in">Sign-in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign-up</string>
    <string name="client">Client</string>
    <string name="washer">Washer</string>
    <string name="courier">Courier</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="usernameSignup">Username</string>
    <string name="passwordSignUp">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="title_activity_client_dashboard">ClientDashboardActivity</string>
    <string name="title_activity_washer_dashboard">WasherDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_current">Current</string>
    <string name="menu_history">History</string>
    <string name="title_activity_courier_dashboard">CourierDashboardActivity</string>
    <string name="client_menu_notification">Notification</string>
    <string name="courier_menu_notification">Notification</string>
    <string name="washer_menu_notification">Notification</string>
    <string name="washer_clothes_to_return">Clothes To Return</string>
    <string name="select_month">Select Month</string>
    <string name="action_settings">Settings</string>
    <string name="courier_home">Home</string>
    <string name="courier_history">History</string>
    <string name="courier_pending_request">Pending Request</string>
    <string name="washer_menu_pendingrequest">Pending Request\n</string>
    <string name="washer_menu_receivedclothes">Received Clothes\n</string>
    <string name="washer_menu_logs">Logs</string>
    <string name="washer_menu_history">History</string>
    <string name="title_activity_book_service">BookServiceActivity</string>
    <string name="you_may_choose_your_next_book">You may choose your next book!</string>
    <string name="action_profile">Profile</string>
</resources>