<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cour_nav_home"
            android:icon="@android:drawable/btn_radio"
            android:title="@string/courier_home" />
        <item
            android:id="@+id/cour_nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/courier_history" />
        <item
            android:id="@+id/cour_nav_logout"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/courier_pending_request" />
        <item
            android:id="@+id/cour_nav_notification"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/courier_menu_notification" />
    </group>
</menu>