<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/washer_pendingrequest_fragment"
            android:icon="@drawable/washer_ic_launcher_pendingrequest_nav"
            android:title="@string/washer_menu_pendingrequest" />
        <item
            android:id="@+id/washer_history_fragment"
            android:icon="@drawable/washer_ic_launcher_history_nav"
            android:title="@string/washer_menu_history" />

        <item
            android:id="@+id/washer_logs_fragment"
            android:icon="@drawable/washer_ic_launcher_logs_nav"
            android:title="@string/washer_menu_logs" />
    </group>
</menu>