<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_current">

    <fragment
        android:id="@+id/nav_current"
        android:name="com.example.laundirii.view.client_dashboard_ui.client_dashboard_current.CurrentFragment"
        android:label="@string/menu_current"
        tools:layout="@layout/client_fragment_current" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.laundirii.view.client_dashboard_ui.client_dashboard_history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/client_fragment_history" />

    <fragment
        android:id="@+id/client_nav_notification"
        android:name="com.example.laundirii.view.client_dashboard_ui.client_dashboard_notification.ClientNotificationFragment"
        android:label="@string/client_menu_notification"
        tools:layout="@layout/client_fragment_notification" />
</navigation>